--- a/blog.html
+++ b/blog.html
@@ -11,7 +11,7 @@
     <link rel=stylesheet type="text/css" href="css/bootstrap-theme.min.css">
     <link rel=stylesheet type="text/css" href="css/blog.css">
     <link rel=stylesheet type="text/css" href="css/fondation.css">
-    <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css">
+    <script src="https://use.fontawesome.com/3e3e6b488a.js"></script>
     <link href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
