fixed hyperlink path

--- a/contact/index.html
+++ b/contact/index.html
@@ -56,7 +56,7 @@
     <div class="main-wrapper">
         <nav class="nav mobile d-md-none">
             <div class="container-fluid">
-                <a class="nav-logo" href="/">
+                <a class="nav-logo" href="https://www.willake.me/wandering-lions/">
                 </a>
                 <div class="nav-hamburger">
                     <button class="hamburger hamburger--squeeze" type="button">
@@ -67,20 +67,20 @@
                 </div>
             </div>
             <ul>
-                <li><a href="/work">WORK</a></li>
-                <li><a href="/blog">BLOG</a></li>
-                <li><a href="/about">ABOUT</a></li>
-                <li><a href="/contact">CONTACT</a></li>
+                <li><a href="https://www.willake.me/wandering-lions/work">WORK</a></li>
+                <li><a href="https://www.willake.me/wandering-lions/blog">BLOG</a></li>
+                <li><a href="https://www.willake.me/wandering-lions/about">ABOUT</a></li>
+                <li><a href="https://www.willake.me/wandering-lions/contact">CONTACT</a></li>
             </ul>
         </nav>
         <nav class="nav desktop d-none d-md-block">
             <div class="container-fluid">
                 <ul class="row">
-                    <li class="col"><a href="/work">WORK</a></li>
-                    <li class="col"><a href="/blog">BLOG</a></li>
-                    <a href="/" class="nav-logo col"></a>
-                    <li class="col"><a href="/about">ABOUT</a></li>
-                    <li class="col"><a href="/contact">CONTACT</a></li>
+                    <li class="col"><a href="https://www.willake.me/wandering-lions/work">WORK</a></li>
+                    <li class="col"><a href="https://www.willake.me/wandering-lions/blog">BLOG</a></li>
+                    <a href="https://www.willake.me/wandering-lions/" class="nav-logo col"></a>
+                    <li class="col"><a href="https://www.willake.me/wandering-lions/about">ABOUT</a></li>
+                    <li class="col"><a href="https://www.willake.me/wandering-lions/contact">CONTACT</a></li>
                 </ul>
             </div>
         </nav>
