--- a/about/index.html
+++ b/about/index.html
@@ -145,7 +145,7 @@
     <script src="https://code.jquery.com/jquery-3.4.0.slim.js"
         integrity="sha256-milezx5lakrZu0OP9b2QWFy1ft/UEUK6NH1Jqz8hUhQ=" crossorigin="anonymous">
     </script>
-    <script src="js/index.min.js"></script>
+    <script src="../js/index.min.js"></script>
 </body>
 
 
